--- a/src/assets/style/cmps/_dashboard-chart.scss
+++ b/src/assets/style/cmps/_dashboard-chart.scss
@@ -3,13 +3,23 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 0.5rem;
     margin-bottom: 1.5rem;
+    flex-direction: column;
+
+    @include for-mobile-layout {
+      flex-direction: row;
+    }
 
     .title {
       text-transform: capitalize;
-      font-size: 1.25rem;
       font-weight: 600;
-      color: $brand-clr4
+      color: $brand-clr4;
+      font-size: 0.8rem;
+
+      @include for-mobile-layout {
+        font-size: 1.25rem;
+      }
     }
 
     .chart-options {
@@ -20,8 +30,13 @@
         color: $brand-clr4;
         background: none;
         border: none;
-        padding: .8rem;
+        padding: 0.8em;
         background-color: white;
+        font-size: 0.8rem;
+
+        @include for-mobile-layout {
+          font-size: 1rem;
+        }
 
         &:hover {
           background-color: darken(white, 4%);
@@ -46,13 +61,10 @@
         border-bottom-right-radius: 3px;
       }
     }
-
   }
-
 
   .graph-container {
     width: 100%;
     height: 100%;
   }
-
 }
