--- a/src/assets/style/cmps/_task-details-attachments.scss
+++ b/src/assets/style/cmps/_task-details-attachments.scss
@@ -4,7 +4,7 @@
   position: relative;
 
   .attachments-title-container {
-    @include task-category()
+    @include task-category();
   }
 
   .attachments-body-container {
@@ -49,7 +49,8 @@
 
         .thumbnail-name {
           color: #172b4d;
-          font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+          font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans,
+            Helvetica Neue, sans-serif;
           font-size: 14px;
           line-height: 20px;
           cursor: pointer;
@@ -59,17 +60,19 @@
         }
 
         .thumbnail-details {
-          color: #5e6c84;
-          margin-bottom: 8px;
+          .att-control {
+            &::before {
+              content: ' - ';
+            }
+          }
 
           .thumbnail-date {
             color: #5e6c84;
             margin-bottom: 8px;
             font-size: 14px;
             font-weight: 400;
-            line-height: 20p
+            line-height: 20p;
           }
-
         }
 
         .thumbnail-cover {
@@ -86,7 +89,6 @@
           }
         }
       }
-
     }
 
     .attachments-add {
@@ -94,10 +96,8 @@
       max-width: 150px;
       display: inline-flex;
       text-align: center;
-
     }
   }
-
 }
 
 .button-att {
