Fixed user image

--- a/src/assets/style/setup/_variables.scss
+++ b/src/assets/style/setup/_variables.scss
@@ -18,7 +18,8 @@ $clr9: #091e4214; // TASK DETAIL BUTTON - HOVER
 $clr10: #42526e; // TASK CLOSE BTN
 $clr11: #b04632; // DANGER
 $clr12: #091e4221;
-$clr13: #eb5a46; // ERROR
+$clr13: #eb5a46;
+$clr14: tomato;
 
 $brand-clr1: #026aa7; // MAIN BRAND
 $brand-clr2: #0079bf; // ACTIVE FONT
