--- a/src/assets/style/basics/_helpers.scss
+++ b/src/assets/style/basics/_helpers.scss
@@ -49,3 +49,17 @@
     height: 80px;
   }
 }
+
+.user-initials {
+  background-color: $clr14;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  font-weight: 700;
+  font-size: rem(14px);
+  color: $font-clr1;
+  text-transform: uppercase;
+}
