--- a/src/assets/style/basics/_helpers.scss
+++ b/src/assets/style/basics/_helpers.scss
@@ -56,10 +56,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  width: 2rem;
-  height: 2rem;
+  width: 100%;
+  height: 100%;
   font-weight: 700;
-  font-size: rem(14px);
+  font-size: 100%;
   color: $font-clr1;
   text-transform: uppercase;
 }
