--- a/src/assets/style/pages/_home-page.scss
+++ b/src/assets/style/pages/_home-page.scss
@@ -152,7 +152,7 @@
       font-family: source-sans-pro-regular;
       font-size: rem(24px);
       margin-bottom: 5rem;
-      line-height: 1.3
+      line-height: 1.3;
     }
 
     .demo-img-container {
@@ -161,7 +161,6 @@
       width: 100%;
       margin-bottom: 4rem;
       box-shadow: 0px 0px 16px 0px rgba(130, 130, 130, 1);
-
 
       img {
         object-fit: contain;
@@ -174,20 +173,52 @@
 
   .home-page-footer {
     position: absolute;
-    padding: 0.25rem;
+    padding: 1rem;
     bottom: 0;
     left: 0;
     background-color: $brand-clr12;
     width: 100%;
-    height: 72px;
-    display: flex;
     color: $font-clr1;
+    display: flex;
     align-items: center;
     justify-content: center;
-    gap: 4rem;
+    gap: 2rem;
     font-family: source-sans-pro-regular;
     font-size: 1.15rem;
     text-align: center;
+
+    @include for-narrow-layout {
+      gap: 4rem;
+    }
+
+    .credit {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5em;
+
+      .icons-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        .icon-container {
+          height: 2rem;
+          width: 2rem;
+          color: $clr1;
+          cursor: pointer;
+
+          &:hover {
+            color: $clr4;
+          }
+
+          * {
+            height: 100%;
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 
   .start-demo {
