--- a/src/assets/style/cmps/_attachment-add.scss
+++ b/src/assets/style/cmps/_attachment-add.scss
@@ -6,18 +6,18 @@
   }
 
   .attach-computer-label {
-    @include modal-main-btn
+    @include modal-main-btn;
   }
 
   hr {
-    margin: .5rem 0;
+    margin: 0.5rem 0;
     height: 1px;
     background: $clr12;
     border: none;
   }
 
   .input-label {
-    @include modal-label
+    @include modal-label;
   }
 
   .link-input {
