--- a/src/assets/style/cmps/_todo-actions.scss
+++ b/src/assets/style/cmps/_todo-actions.scss
@@ -4,7 +4,7 @@
 
   .delete-btn {
     @include modal-main-btn;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
 
     &:hover {
       background-color: rgba(9, 30, 66, 0.08);
