--- a/src/assets/style/cmps/_account-actions.scss
+++ b/src/assets/style/cmps/_account-actions.scss
@@ -3,18 +3,9 @@
 
   .account-info {
     display: flex;
-    // width: 304px;
-    // padding: 1.5rem rem(12px) .5rem rem(14px);
-    // margin: 0 -12px;
-    // background-image: linear-gradient(to bottom, $brand-clr2 0%, $brand-clr2 100%);
-    // background-repeat: no-repeat;
-    // background-size: 100% 82px;
-    // border-top-left-radius: 3px;
-    // border-top-right-radius: 3px;
 
     .account-img-container {
       border-radius: 50%;
-      // padding: 4px 8px 4px 12px;
       width: 40px;
       height: 40px;
 
@@ -30,14 +21,11 @@
         width: 100%;
         height: 100%;
         border-radius: 50%;
-
-
       }
     }
 
     .credentials {
-      margin-left: .5rem;
-      // margin-top: .5rem;
+      margin-left: 0.5rem;
       line-height: rem(20px);
       text-overflow: ellipsis;
       overflow: hidden;
@@ -53,7 +41,6 @@
         color: $font-clr5;
         font-size: rem(12px);
       }
-
     }
   }
 
@@ -64,6 +51,6 @@
   }
 
   button {
-    @include modal-main-btn
+    @include modal-main-btn;
   }
 }
