--- a/src/assets/style/cmps/_activity-list.scss
+++ b/src/assets/style/cmps/_activity-list.scss
@@ -12,8 +12,7 @@
   height: 100%;
   padding: 12px 6px;
 
-
-  @include custom-scrollbar
+  @include custom-scrollbar;
 }
 
 .activity {
@@ -36,12 +35,11 @@
     color: $font-clr2;
 
     &:active {
-      color: $font-clr2
+      color: $font-clr2;
     }
   }
 
   .activity-text {
-
     .comment-container {
       padding: 8px 12px;
       position: relative;
@@ -75,8 +73,6 @@
         overflow-wrap: break-word;
         height: 20px;
       }
-
-
     }
   }
 
@@ -84,11 +80,9 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // flex: 11
   }
 
   .activity-text {
-
     .activity-content {
       word-break: break-word;
     }
@@ -101,10 +95,9 @@
     font-weight: 400;
     line-height: 20px;
 
-
     .fullname {
       font-weight: 700;
-      color: black
+      color: black;
     }
   }
 
@@ -134,5 +127,4 @@
     font-size: 12px;
     display: inline-block;
   }
-
 }
