--- a/src/assets/style/cmps/_checklist-preview.scss
+++ b/src/assets/style/cmps/_checklist-preview.scss
@@ -3,7 +3,6 @@
   width: 100%;
 
   header {
-    // display: flex;
     position: relative;
     align-items: center;
     justify-content: space-between;
@@ -211,8 +210,8 @@
       resize: vertical;
       box-shadow: inset 0 0 0 2px #0079bf;
       color: #172b4d;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
       outline: none;
       overflow: hidden;
       overflow-wrap: break-word;
