--- a/src/assets/style/cmps/_group-list.scss
+++ b/src/assets/style/cmps/_group-list.scss
@@ -1,6 +1,5 @@
 .group-list {
   display: flex;
-  // height: calc(100% - 94px);
   padding-right: 2px;
   height: calc(100% - 110px);
   overflow-y: hidden;
@@ -18,7 +17,6 @@
   }
 
   &::-webkit-scrollbar {
-
     height: 12px;
   }
 
@@ -37,7 +35,8 @@
   .add-group {
     color: #ffff;
     font-size: 14px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
     text-overflow: ellipsis;
     line-height: 32px;
     height: 40px;
@@ -58,7 +57,8 @@
   .add-group-btn {
     color: #ffff;
     font-size: 14px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
     text-overflow: ellipsis;
     line-height: 32px;
     height: 40px;
@@ -110,7 +110,6 @@
     }
 
     .btn-container {
-
       display: flex;
       align-items: center;
       gap: 2px;
@@ -124,7 +123,7 @@
         color: lighten($font-clr3, 5%);
 
         &:hover {
-          color: darken($font-clr3, 20%)
+          color: darken($font-clr3, 20%);
         }
 
         .x-icon {
@@ -133,7 +132,5 @@
         }
       }
     }
-
   }
-
 }
