--- a/src/assets/style/cmps/_group-preview.scss
+++ b/src/assets/style/cmps/_group-preview.scss
@@ -6,13 +6,11 @@
   margin: 0px 4px;
   background-color: $brand-clr8;
   color: $brand-clr6;
-  // height: fit-content;
   max-height: 100%;
   overflow: hidden;
 
   &.archived {
     overflow-y: unset;
-    // height: 100%;
     width: 100%;
     margin: 0;
     background-color: unset;
@@ -31,8 +29,8 @@
       background: #0000;
       flex: 1;
       color: $brand-clr6;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
       line-height: 20px;
       border-radius: 3px;
       font-weight: 600;
@@ -98,12 +96,9 @@
       font-weight: 400;
       gap: 5px;
 
-      // line-height: 28;
       &:hover {
         background-color: $clr1;
       }
-
-
     }
   }
 }
