--- a/src/assets/style/cmps/_login-signup.scss
+++ b/src/assets/style/cmps/_login-signup.scss
@@ -49,8 +49,8 @@
     border: 2px solid $clr5;
     outline: none;
     transition: border-color 0.2s;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
     font-weight: 300;
 
     &:focus {
@@ -70,8 +70,8 @@
     padding: rem(8.4px) rem(18.2px);
     font-weight: bold;
     transition: background-color 0.08s;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
 
     &.login-btn {
       background-color: $clr6;
@@ -93,7 +93,6 @@
 
   .login-method {
     width: 100%;
-    // height: 220px;
 
     div {
       width: 100%;
@@ -113,8 +112,8 @@
       background-color: #ffff;
       box-shadow: rgb(0 0 0 / 20%) 1px 1px 5px 0;
       color: $font-clr3;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
       border-radius: 3px;
       transition: background-color 0.2s;
 
