--- a/src/assets/style/cmps/_modal-dates.scss
+++ b/src/assets/style/cmps/_modal-dates.scss
@@ -9,7 +9,8 @@
     transform: translateX(-50%);
     color: rgb(23, 43, 77);
     font-weight: bold;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans',
+      'Helvetica Neue', sans-serif;
     font-size: 14px;
     line-height: 20px;
     pointer-events: none;
@@ -83,7 +84,8 @@
       border: none;
       box-sizing: border-box;
       color: #172b4d;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Noto Sans", "Ubuntu", "Droid Sans", "Helvetica Neue", sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
       font-size: 14px;
       line-height: 20px;
       font-weight: 400;
@@ -126,6 +128,5 @@
         border: none;
       }
     }
-
   }
 }
