--- a/src/assets/style/cmps/_modal-label-create.scss
+++ b/src/assets/style/cmps/_modal-label-create.scss
@@ -26,7 +26,8 @@
       transition-property: background-color, border-color, box-shadow;
       transition-timing-function: ease;
       color: #172b4d;
-      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
+        sans-serif;
       font-size: 14px;
       font-weight: 400;
 
@@ -34,7 +35,6 @@
         background-color: #fff;
         box-shadow: inset 0 0 0 2px #0079bf;
       }
-
     }
   }
 
@@ -64,7 +64,6 @@
     }
 
     .colors-section {
-
       .box-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -98,12 +97,11 @@
 
           &:focus {
             &::after {
-              content: "✓"
+              content: '✓';
             }
           }
         }
       }
     }
   }
-
 }
