--- a/src/assets/style/cmps/_modal-member.scss
+++ b/src/assets/style/cmps/_modal-member.scss
@@ -21,7 +21,8 @@
       transition-property: background-color, border-color, box-shadow;
       transition-timing-function: ease;
       color: #172b4d;
-      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
+        sans-serif;
       font-size: 14px;
       font-weight: 400;
 
@@ -52,7 +53,6 @@
           background-color: #091e420a;
           cursor: pointer;
           border-radius: 3px;
-
         }
 
         .member-list {
@@ -111,13 +111,6 @@
           }
         }
       }
-
-
     }
-
-
   }
-
-
-
 }
