--- a/src/assets/style/cmps/_task-delete.scss
+++ b/src/assets/style/cmps/_task-delete.scss
@@ -2,8 +2,8 @@
   width: 280px;
 
   .warning-msg {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
     font-size: rem(14px);
     color: $brand-clr4;
     line-height: 20px;
@@ -17,8 +17,8 @@
     margin-top: 0.5rem;
     border-radius: 3px;
     line-height: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
     font-weight: 400;
     font-size: rem(14px);
     transition: background-color 0.085s;
