--- a/src/assets/style/cmps/_task-details-activity.scss
+++ b/src/assets/style/cmps/_task-details-activity.scss
@@ -18,9 +18,8 @@
   }
 
   .activity-title-container {
-    @include task-category()
+    @include task-category();
   }
-
 
   .activity-list-container {
     margin-left: 40px;
@@ -29,7 +28,6 @@
     position: relative;
 
     .member {
-
       img {
         object-fit: cover;
         height: 32px;
@@ -54,11 +52,9 @@
           padding: 2px 14px;
         }
       }
-
     }
 
     .comment-frame {
-
       background-color: #fff;
       border-radius: 3px;
       box-shadow: 0 1px 2px -1px #091e4240, 0 0 0 1px #091e4214;
@@ -108,7 +104,8 @@
           width: 100%;
           border: none;
           border-radius: 3px;
-          font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+          font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans,
+            Helvetica Neue, sans-serif;
           font-size: 14px;
           font-weight: 400;
           outline: none;
@@ -117,7 +114,6 @@
         input {
           @include task-save();
         }
-
       }
     }
 
@@ -129,8 +125,6 @@
       font-weight: 400;
       line-height: 20px;
       padding-bottom: 3px;
-
-
     }
 
     .time-container {
@@ -140,5 +134,4 @@
       color: #5e6c84;
     }
   }
-
 }
