--- a/src/assets/style/cmps/_task-details-title.scss
+++ b/src/assets/style/cmps/_task-details-title.scss
@@ -35,7 +35,8 @@
     padding: 4px 0px;
     resize: none;
     background: rgba(0, 0, 0, 0);
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
     // height: 28px;
     border: none;
 
