--- a/src/assets/style/cmps/_task-filter.scss
+++ b/src/assets/style/cmps/_task-filter.scss
@@ -5,7 +5,6 @@
   padding-right: 12px;
 
   .checkbox-container {
-
     height: 1rem;
     width: 1rem;
     margin-right: 1rem;
@@ -32,22 +31,21 @@
         }
       }
     }
-
   }
 
   .by-keyword {
     .keyword-search-label {
       @include modal-label;
-      margin: 1rem 0 .5rem;
+      margin: 1rem 0 0.5rem;
     }
 
     .keyword-search {
       @include modal-input;
-      margin: 0
+      margin: 0;
     }
 
     .instructions {
-      margin: .5rem 0 .25rem;
+      margin: 0.5rem 0 0.25rem;
       color: $font-clr4;
       font-size: 11px;
       line-height: 14px;
@@ -58,19 +56,18 @@
   .by-member {
     .member-label {
       @include modal-label;
-      margin: 1rem 0 .5rem;
+      margin: 1rem 0 0.5rem;
     }
 
     .member-preview {
       display: flex;
       align-items: center;
-      padding: .5rem 0 .5rem .5rem;
-
+      padding: 0.5rem 0 0.5rem 0.5rem;
 
       .member-img-container {
         height: 24px;
         width: 24px;
-        margin-right: .5rem;
+        margin-right: 0.5rem;
         border-radius: 50%;
         background-color: tomato;
         color: $font-clr1;
@@ -102,16 +99,15 @@
   }
 
   .by-label {
-
     .labels-label {
       @include modal-label;
-      margin: 1rem 0 .5rem;
+      margin: 1rem 0 0.5rem;
     }
 
     .label-preview {
       display: flex;
       align-items: center;
-      padding: 0 0 .5rem .5rem;
+      padding: 0 0 0.5rem 0.5rem;
 
       .label {
         display: flex;
@@ -125,12 +121,8 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         font-size: rem(14px);
-        padding: 0 .5rem;
+        padding: 0 0.5rem;
       }
-
     }
-
-
   }
-
 }
