--- a/src/assets/style/cmps/_task-list.scss
+++ b/src/assets/style/cmps/_task-list.scss
@@ -3,8 +3,8 @@
   min-height: 1px;
   display: flex;
   flex-direction: column;
-  padding: 0 .25rem;
-  margin: 0 .25rem;
+  padding: 0 0.25rem;
+  margin: 0 0.25rem;
   overflow-y: auto;
   overflow-x: hidden;
 
@@ -19,15 +19,14 @@
       line-height: 20px;
       margin-left: 15px;
     }
-
   }
 
   .add-card-container {
     padding: 0 0 4px;
 
     textarea {
-
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
       width: 100%;
       padding: 10px;
       height: fit-content;
@@ -65,7 +64,6 @@
     }
 
     .btn-container {
-
       display: flex;
       align-items: center;
       gap: 2px;
@@ -79,7 +77,7 @@
         color: lighten($font-clr3, 5%);
 
         &:hover {
-          color: darken($font-clr3, 20%)
+          color: darken($font-clr3, 20%);
         }
 
         .x-icon {
@@ -88,9 +86,7 @@
         }
       }
     }
-
-
   }
 
-  @include custom-scrollbar
+  @include custom-scrollbar;
 }
