--- a/src/assets/style/pages/_task-details.scss
+++ b/src/assets/style/pages/_task-details.scss
@@ -26,8 +26,17 @@
 
     .task-archived {
       position: relative;
-      background-color: #FDFAE5;
-      background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.05) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.05) 50%, rgba(0, 0, 0, 0.05) 75%, transparent 75%, transparent);
+      background-color: #fdfae5;
+      background-image: linear-gradient(
+        to bottom right,
+        rgba(0, 0, 0, 0.05) 25%,
+        transparent 25%,
+        transparent 50%,
+        rgba(0, 0, 0, 0.05) 50%,
+        rgba(0, 0, 0, 0.05) 75%,
+        transparent 75%,
+        transparent
+      );
       background-size: 14px 14px;
       padding: rem(12px) rem(12px) rem(12px) rem(50px);
       font-size: 16px;
@@ -61,7 +70,7 @@
       position: absolute;
       right: 5px;
       top: 5px;
-      transition: background-color .2s;
+      transition: background-color 0.2s;
       z-index: 300;
 
       .close-icon {
@@ -71,7 +80,7 @@
       }
 
       &:hover {
-        background-color: $clr9
+        background-color: $clr9;
       }
     }
   }
@@ -87,7 +96,6 @@
 
     @include for-narrow-layout {
       max-width: 576px;
-
     }
   }
 }
